# Redundancy-Hunter

./: .dockerignore  .gitignore  Dockerfile  README.md  docker_container.sh  pyproject.toml  requirements.txt
src/experiments/configurations/: CONFIG_COLAB.yaml  CONFIG_LOCAL.yaml  CONFIG_LOCAL_TEST.yaml  CONFIG_LOCAL_TESTS.yaml  CONFIG_SERVER.yaml
src/redhunter/: __init__.py  analysis_experiment.py  analysis_launcher.py  analysis_merger.py
src/redhunter/analysis/: activations_analysis.py  analysis_utils.py  basic_model_analysis.py  delta_layers_rank_analysis.py  head_analysis.py  layer_replacement_analysis.py  layer_replacement_analysis_utils.py  matrix_initialization_analysis.py  original_layers_rank_analysis.py  rank_analysis.py  rank_analysis_experiment.py  rank_analysis_launcher.py  rank_analysis_utils.py  sorted_layers_compression_analysis.py  sorted_layers_compression_analysis_utils.py  sorted_layers_rank_analysis.py  swapped_layers_redundancy_analysis.py  swapped_layers_redundancy_analysis_utils.py
src/redhunter/utils/layer_replacement_wrapper/: layer_replacement_wrapper.py
src/redhunter/utils/list_utils/: list_utils.py
src/test/analysis/: test_layer_replacement_analysis_utils.py
